--- a/SpotDown V2/SpotDown V2/Properties/Resources.resx
+++ b/SpotDown V2/SpotDown V2/Properties/Resources.resx
@@ -143,6 +143,6 @@
     <value>..\Resources\wait.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ffmpeg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\ffmpeg.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\ffmpeg.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
